<resources>
    <string name="app_name">FSL Clubs</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>

    <string name="cancel">cancel</string>
    <string name="ok">OK</string>

    <!-- login activity -->
    <string name="login">login</string>
    <string name="username">phone number</string>
    <string name="password">password</string>
    <string name="submmit">submmit</string>
    <string name="Yes">Yes</string>
    <string name="stroll">stroll</string>
    <string name="phone_not_fill">phone must be filled</string>
    <string name="password_not_fill">password must be filled</string>
    <string name="network_error">network error</string>
    <string name="password_wrong">password input wrong</string>
    <string name="phone_not_exist">phone number not exsit, please register first</string>
    <string name="save_user_success">save user success</string>

    <!-- register activity -->
    <string name = "register">register</string>
    <string name = "query_password">password again</string>
    <string name = "email">email</string>
    <string name = "register_btn">register</string>
    <string name="name">real name</string>
    <string name="password_again_not_fill">password again must be filled</string>
    <string name="name_not_fill">name must be filled</string>
    <string name="password_not_match">2 times input password not matched</string>
    <string name="phone_already_exist">phoneNo already exist, please choose another</string>
    <string name="register_success">register success</string>

    <!-- main activity -->
    <string name="activities">activity</string>
    <string name="my_activity">my activity</string>
    <string name="clubs">clubs</string>
    <string name="me">me</string>

    <!--clubs fragment & activity -->
    <string name="head_clubs">clubs</string>
    <string name="basketball">basketball club</string>
    <string name="football">football club</string>
    <string name="snooker">snooker club</string>
    <string name="yoga">yoga club</string>
    <string name="pingpang">pingpang club</string>
    <string name="tennis">tennis club</string>
    <string name="riding">riding club</string>
    <string name="badminton">badminton club</string>
    <string name="basketball_desc">周四 6:00 ~ 8:00 坤如体育中心</string>
    <string name="football_desc">周三 6:00 ~ 8:00 中医药体育场</string>
    <string name="snooker_desc">周三 6:00 ~ 8:30 龙阳路潘晓婷台球室</string>
    <string name="yoga_desc">周一 5:00 ~ 6:00 飞思卡尔七楼</string>
    <string name="pingpang_desc">周二 6:00 ~ 8:00 飞思卡尔七楼</string>
    <string name="tennis_desc">周三 6:00 ~ 8：00 德国中心网球场</string>
    <string name="riding_desc">时间地点不固定</string>
    <string name="badminton_desc">周一 6:00 ~ 8:00 藿香路张江实验小学</string>
    <string name="join">join</string>
    <string name="member">member</string>
    <string name="join_after_login">must log in first before join clubs</string>
    <string name="join_club_success">join club success</string>
    <string name="already_joined_club">already joined</string>
    <string name="club_member">club member</string>
    <string name="no_member_exist">no member exist</string>

    <!-- me fragment -->
    <string name="head_me">me</string>
    <string name="check_version">check version</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="please_login">please login</string>

    <!-- about activity -->
    <string name="head_about">about</string>
    <string name="about_txt">
        <br>Copyright: yangyi.xie@freescale.com\n</br>
        <br>Phone: 13701646157\n</br>
        <br>WeiChat:XieYangyi1989\n</br>
        <br>git: https://github.com/xieyangyi\n</br>
    </string>

    <!-- settings activity -->
    <string name="head_settings">settings</string>
    <string name="alarm_settings">alarm settings</string>
    <string name="alarm_sound_off">close sound when activity alarm ring</string>

    <!-- check version update -->
    <string name="softwear_update">new version checked</string>
    <string name="softwear_update_message">update</string>
    <string name="downloading">downloading</string>
    <string name="softwear_update_no_need">no need to update</string>

    <!-- person_info activity -->
    <string name="head_person_info">person info</string>
    <string name="info_name">name</string>
    <string name="info_sex">sex</string>
    <string name="info_male">male</string>
    <string name="info_female">female</string>
    <string name="info_email">email</string>
    <string name="info_coreid">core id</string>
    <string name="info_signature">signature</string>
    <string name="info_clubs">clubs</string>
    <string name="info_title_name">please use real name</string>
    <string name="info_save">save</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <!--activities fragment & activity -->
    <string name="head_activities">activities</string>
    <string name="signup">sign up</string>
    <string name="signup_after_login">must log in first before sign up activity</string>
    <string name="signup_activity_success">sign up activity success</string>
    <string name="already_signed_activity">already joined activity</string>
    <string name="activity_expired">activity expired</string>
    <string name="already_oldest">already oldest activity</string>
    <string name="already_latest">already latest activity</string>

    <!--my activity fragment & activity -->
    <string name="head_my_activity">activities</string>
    <string name="head_my_activity_alarm">alarm</string>
    <string name="fragment_my_activity_alarm">alarm：</string>
    <string name="activity_name">name</string>
    <string name="activity_date">date</string>
    <string name="activity_time">time</string>
    <string name="activity_is_alarm_on">alarm_on</string>

    <!--listview pull refresh -->
    <string name="listview_pull_to_refresh">pull to refresh</string>
    <string name="listview_update_at">updated at</string>
    <string name="listview_release_to_refresh">release to refresh</string>
    <string name="listview_refreshing">refreshing</string>
    <string name="listview_not_updated_yet">not updated yet</string>
    <string name="listview_updated_just_now">updated just now</string>
    <string name="listivew_time_error">time error</string>

    <!-- activity search result -->
    <string name="search_result">search results</string>
    <string name="search_hint">input for search</string>
</resources>
