<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/login"
            style="@style/top_text" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_login_padding"
        android:paddingLeft="@dimen/activity_login_padding"
        android:paddingRight="@dimen/activity_login_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/edt_phone"
            android:textSize="@dimen/activity_login_edtsize"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_password"
            android:textSize="@dimen/activity_login_edtsize"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_submmit"
            android:text="@string/submmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:background="@android:color/transparent"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_stroll"
                android:text="@string/stroll"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
