<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<LinearLayout-->
        <!--android:background="@color/grey"-->
        <!--style="@style/fragment_me_layout">-->
        <!--<ImageView-->
            <!--android:id="@+id/imgv_fragment_me_me"-->
            <!--android:src="@drawable/not_login"-->
            <!--style="@style/fragment_me_icon" />-->
        <!--<TextView-->
            <!--android:id="@+id/txt_fragment_me_me"-->
            <!--style="@style/fragment_me_text" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        style="@style/fragment_me_layout">
        <ImageView
            android:id="@+id/imgv_fragment_me_settings"
            android:src="@drawable/settings"
            style="@style/fragment_me_icon" />
        <TextView
            android:id="@+id/txt_fragment_me_settings"
            android:text="@string/settings"
            style="@style/fragment_me_text" />
    </LinearLayout>

    <LinearLayout
        style="@style/fragment_me_layout">
        <ImageView
            android:id="@+id/imgv_fragment_me_version"
            android:src="@drawable/check_version"
            style="@style/fragment_me_icon" />
        <TextView
            android:id="@+id/txt_fragment_me_version"
            android:text="@string/check_version"
            style="@style/fragment_me_text" />
    </LinearLayout>

    <LinearLayout
        style="@style/fragment_me_layout">
        <ImageView
            android:id="@+id/imgv_fragment_me_about"
            android:src="@drawable/about"
            style="@style/fragment_me_icon" />
        <TextView
            android:id="@+id/txt_fragment_me_about"
            android:text="@string/about"
            style="@style/fragment_me_text" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--style="@style/fragment_me_layout">-->
        <!--<ImageView-->
            <!--android:id="@+id/imgv_fragment_me_exit"-->
            <!--android:src="@drawable/exit"-->
            <!--style="@style/fragment_me_icon" />-->
        <!--<TextView-->
            <!--android:id="@+id/txt_fragment_me_exit"-->
            <!--android:text="@string/exit"-->
            <!--style="@style/fragment_me_text" />-->
    <!--</LinearLayout>-->


</LinearLayout>
